[gd_scene load_steps=6 format=2]

[ext_resource path="res://Interfaz.gd" type="Script" id=1]
[ext_resource path="res://dodge_assets/art/avocado_creamy/Avocado Creamy.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 80
font_data = ExtResource( 2 )

[node name="Interfaz" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ScoreLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -44.0
margin_right = 44.0
margin_bottom = 151.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mensaje" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -286.0
margin_top = -86.0
margin_right = 286.0
margin_bottom = 86.0
custom_fonts/font = SubResource( 2 )
text = "Juego de Ibrahim"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BotonPlay" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -100.0
margin_top = -200.0
margin_right = 100.0
margin_bottom = -100.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
text = "Jugar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MensajeTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
[connection signal="pressed" from="BotonPlay" to="." method="_on_BotonPlay_pressed"]
[connection signal="timeout" from="MensajeTimer" to="." method="_on_MensajeTimer_timeout"]
